fixed package.json string issue, created User model

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChismeBook",
+  "name": "chisme-book",
   "version": "1.0.0",
   "description": "Social media platform",
   "main": "index.js",
